Fix video clipping info section

--- a/src/components/feed/Feed.css
+++ b/src/components/feed/Feed.css
@@ -9,10 +9,3 @@
 }
 
 
-@media only screen and (max-width: 900px) {
-  #feed > * { 
-    width: 95%;
-    min-width: 0;
-    max-width: 100%;
-  }
-}
